--- a/.github/workflows/database.yml
+++ b/.github/workflows/database.yml
@@ -8,6 +8,6 @@ jobs:
     - uses: actions/checkout@v3
     - uses: azure/sql-action@v2
       with:
-        connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
+        connection-string: ${{ variables.GM_VM_SQL_CONNECTION_STRING }}
         path: './cicd_db_proj/bin/Debug/cicd_db.dacpac'
         action: 'publish'
