--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@
 
 /cicd_db_proj/obj/Debug
 
-/cicd_db_proj/.vs
+*.suo
+*.dbmdl
+*.jfm
+*.refactorlog
 
 /cicd_db_proj/bin/*.txt
 /cicd_db_proj/bin/*.sql
