--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 *.jfm
 *.refactorlog
 
-/cicd_db_proj/obj/Debug
-/cicd_db_proj/bin/Debug
+/cicd_db_proj/obj
+/cicd_db_proj/bin
 
 /cicd_db_proj/bin/*.txt
 /cicd_db_proj/bin/*.sql
