--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,21 +1,30 @@
+trigger:
+- main
+
+pool:
+  vmImage: 'windows-latest'
+
+
+steps:
+
 - task: MSBuild@1
   displayName: 'Build database'
   inputs:
     solution: 'cicd_db_proj/cicd_db_proj.sln'
 
 - task: CopyFiles@2
-    displayName: 'Extract dacpac'
-    inputs:
-        CleanTargetFolder: false
-        SourceFolder: '$(agent.builddirectory)\s\src\cicd_db_proj\bin\Debug\'
-        Contents: '*.dacpac'
-        TargetFolder: '$(build.artifactstagingdirectory)'
+  displayName: 'Extract dacpac'
+  inputs:
+    CleanTargetFolder: false
+    SourceFolder: '$(agent.builddirectory)\s\src\cicd_db_proj\bin\Debug\'
+    Contents: '*.dacpac'
+    TargetFolder: '$(build.artifactstagingdirectory)'
 
-  - task: PublishPipelineArtifact@1
-    displayName: 'Publish artifact'
-    inputs:        
-        targetPath: '$(build.artifactstagingdirectory)'
-        artifact: 'drop'
+- task: PublishPipelineArtifact@1
+  displayName: 'Publish artifact'
+  inputs:
+    targetPath: '$(build.artifactstagingdirectory)'
+    artifact: 'drop'
 
 - task: SqlDacpacDeploymentOnMachineGroup@0
   inputs:
