Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,11 @@ pool:
 
 steps:
 
+- task: DotNetCoreInstaller@0
+  displayName: Install .NET Core
+  inputs:
+    packageType: 'sdk'
+
 - task: MSBuild@1
   displayName: 'Build database'
   inputs:
