--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ pool:
 steps:
 
 - task: DotNetCoreInstaller@0
-  displayName: Install .NET Core
+  displayName: 'Install .NET Core'
   inputs:
     packageType: 'sdk'
 
